--- a/src/styles.css
+++ b/src/styles.css
@@ -360,6 +360,9 @@ app-gastos-entradas {
   margin-left: 10px;
   font-size: 18px;
 }
+.btn-delete-MNT {
+  width: 90px; font-size: 16px;
+}
 .icon-Calendar-full {
   padding: 0px !important; margin-left: -10px !important; font-size: 25px !important;
 }
@@ -369,4 +372,10 @@ app-gastos-entradas {
 }
 .flex-row-reverse {
   display: flex; flex-direction: row-reverse;
+}
+.titulo-Modal {
+  width: 100%; display: block; margin-bottom: 20px;
+}
+.font-weight-500 {
+  font-weight: 500;
 }
