--- a/src/app/Paginas/Body/backup/accounts/accounts.component.html
+++ b/src/app/Paginas/Body/backup/accounts/accounts.component.html
@@ -21,6 +21,33 @@
           <div class="row" style="width: 100%; display: block; margin-bottom: 20px;" *ngIf="util.isDelete(option)">
             <h5 class="text-center" style="font-weight: 500;">¿ Esta seguro de eliminar la cuenta num: {{(accountService.indexAccountSelected + 1)}}, Id_account: {{account.value.id_account}} del Respaldo Id_backup: {{accountService.id_backup}}?</h5>
           </div>
+
+          <div class="flex-row-reverse">
+            <div class="custom-control custom-switch">
+              <input type="checkbox" class="custom-control-input" id="selected" formControlName="selected" [ngClass]="(getError('selected') == '') ? 'valid-control' : 'invalid-control'">
+              <label class="custom-control-label" for="selected">Selected</label>
+              <div class="invalid-feedback">{{ getError('selected')}}</div>
+            </div>
+          </div>
+
+          <fieldset class="form-group" >
+            <div class="form-row">
+              <div class="form col checkRadioCenter">
+                <div class="custom-control custom-radio width-90">
+                  <input type="radio" class="custom-control-input" id="customControlValidation2" name="sign" value="+" formControlName="sign" [ngClass]="(getError('sign') == '') ? 'valid-control' : 'invalid-control'">
+                  <label class="custom-control-label" for="customControlValidation2">Ingresos</label>
+                </div>
+              </div>
+              <div class="form col checkRadioCenter">
+                <div class="custom-control custom-radio width-90">
+                  <input type="radio" class="custom-control-input" id="customControlValidation3" name="sign" value="-" formControlName="sign" [ngClass]="(getError('sign') == '') ? 'valid-control' : 'invalid-control'">
+                  <label class="custom-control-label" for="customControlValidation3">Gastos</label>
+                </div>
+              </div>
+              <div class="invalid-feedback">{{ getError('sign')}}</div>
+            </div>
+          </fieldset>
+
           <div class="form-group">
             <label for="name">Name: </label>
             <input type="text" class="form-control" id="name" formControlName="name" [ngClass]="(getError('name') == '') ? 'valid-control' : 'invalid-control'">
@@ -33,14 +60,6 @@
           </div>
           <div class="form-group">
             <div class="form-row">
-              <div class="col-2">
-                <label for="sign">Sign: </label>
-                <select class="form-control" id="sign" formControlName="sign" [ngClass]="(getError('sign') == '') ? 'valid-control' : 'invalid-control'">
-                  <option value="-">-</option>
-                  <option value="+">+</option>
-                </select>
-                <div class="invalid-feedback">{{ getError('sign')}}</div>
-              </div>
               <div class="col">
                 <label for="income">Income: </label>
                 <input type="number" class="form-control" [step]="util.stepDecimal" id="income" formControlName="income" [ngClass]="(getError('income') == '') ? 'valid-control' : 'invalid-control'">
@@ -73,18 +92,7 @@
                 <label for="month">Month: </label>
                 <select class="form-control" id="month" formControlName="month" [ngClass]="(getError('month') == '') ? 'valid-control' : 'invalid-control'">
                   <option value="0">Selecciona un mes</option>
-                  <option value="1">Enero</option>
-                  <option value="2">Febrero</option>
-                  <option value="3">Marzo</option>
-                  <option value="4">Abril</option>
-                  <option value="5">Mayo</option>
-                  <option value="6">Junio</option>
-                  <option value="7">Julio</option>
-                  <option value="8">Agosto</option>
-                  <option value="9">Septiembre</option>
-                  <option value="10">Octubre</option>
-                  <option value="11">Noviembre</option>
-                  <option value="12">Diciembre</option>
+                  <option *ngFor="let month of util.nameMonth" [value]="month.value">{{month.name}}</option>
                 </select>
                 <div class="invalid-feedback">{{ getError('month')}}</div>
               </div>
@@ -132,14 +140,6 @@
                   <option *ngFor="let currency of accountService.CurrenciesGralBackup" [value]="currency.iso_code">{{currency.iso_code}} ({{currency.symbol}})</option>
                 </select>
                 <div class="invalid-feedback">{{ getError('iso_code')}}</div>
-              </div>
-              <div class="col">
-                <label for="selected">Selected: </label>
-                <select class="form-control" id="selected" formControlName="selected" [ngClass]="(getError('selected') == '') ? 'valid-control' : 'invalid-control'">
-                  <option value="0">0</option>
-                  <option value="1">1</option>
-                </select>
-                <div class="invalid-feedback">{{ getError('selected')}}</div>
               </div>
               <div class="col">
                 <label for="value_type">Value_type: </label>
